--- a/Dockerfile.11.1
+++ b/Dockerfile.11.1
@@ -1,7 +1,7 @@
 FROM postgres:11.1
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
-    apt-get update && \
+    apt-get update  -qq && \
     apt-get install -qqy curl ca-certificates && \
     cd /usr/local/bin && curl -L https://github.com/wal-g/wal-g/releases/download/v0.2.2/wal-g.linux-amd64.tar.gz | tar xzf - 
 
