--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: pgplus
 data:
-  postgres.master_dns_name: "master.db"
+  postgres.master_dns_name: "db-standby"
   pgbouncer.pool_mode: "session"
   walg.aws_endpoint: ""
   walg.s3_prefix: "s3://bucket/path/to/files"
