--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -9,3 +9,4 @@ data:
   walg.s3_prefix: "s3://bucket/path/to/files"
   postgres.restore: "1"
   postgres.is_standby: "1"
+  postgres.initdb_args: "-e POSTGRES_INITDB_ARGS='--data-checksums'"
