--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -6,6 +6,6 @@ type: Opaque
 stringData:
   postgres.user: postgres
   postgres.password: your_password
-  postgres.primary_conninfo: your_primary_conninfo
+  #postgres.primary_conninfo: your_primary_conninfo
   walg.access_key: your_access_key_id
   walg.secret_key: your_secret_access_key
