expose archive_mode

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -10,3 +10,4 @@ data:
   #postgres.restore: ""
   #postgres.is_standby: ""
   #postgres.initdb_args: "--data-checksums"
+  #postgres.archive_mode: "on"
